--- a/style.css
+++ b/style.css
@@ -17,6 +17,16 @@
    color: #ffffff;
 }
 
+.buttonRead {
+    color: #6d1830;
+    margin-left: 22px;
+    transition: all .2s;
+}
+
+.buttonRead:hover {
+    margin-left: 35px;
+}
+
 .Star {
     width: 50%;
 }
@@ -30,7 +40,7 @@
 
 .inputText {
     width: 540px;
-    height: 12vh;
+    height: 20vh;
     padding-left: 15px;
 }
 
@@ -101,16 +111,16 @@
     margin-top: -52px;
 }
 
-.crossPhone {
-    display: none;
-}
+ .crossPhone {
+    margin-top: -48px;
+} 
 
 .Yes2 {
     display: none;
 }
 
 .yesImage {
-    margin-top: -95px;
+     margin-top: -95px; 
 }
 
 .Txtimg {
@@ -176,9 +186,13 @@
         display: none;
     }
 
+    .buttonRead {
+        margin-left: 0px;
+    }
+
     .inputText {
         width: 95%;
-        height: 13vh;
+        height: 20vh;
         padding-left: 5px;
     }
 
@@ -246,50 +260,40 @@
     }
 }
 
-@media only screen and (max-width: 600px) {
-    .yesImage {
-        display: none;
-    }
-    
-    .rectangle {
-        height: 82vh;
-        width: 100%;
-    }
-}
 
 @media  screen and (max-width: 999px) {
-    .crossPhone {
-        background-image: url(Images/Yes.png);
-        background-size: cover;
-        background-repeat: no-repeat;
-        display: block;
-        height: 45vh;
-    }
-
-    .Yes2 {
-        background-image: url(Images/Yes.png);
-        background-size: cover;
-        background-repeat: no-repeat;
-        display: block;
-        height: 44vh;
-    }
-
-    .Crossphoneall {
-        display: none;
-    }
-
     .yesImage {
-        display: none;
+        margin-top: 0px;
     }
+
+    .crossPhone {
+        margin-top: 0px;
+    } 
 
     .ourMission {
-        height: 79vh;
+        height: 48vh;
         width: 100%;
+        overflow-y: hidden;
     }
 
     .rectangle {
-        height: 81vh;
+        height: 58vh;
         width: 100%;
+        overflow-y: hidden;
     }
 
+}
+
+@media screen and ((max-width: 600px)) {
+    .rectangle {
+        height: 58vh;
+        width: 100%;
+        overflow-y: hidden;
+    } 
+
+     .ourMission {
+        height: 48vh;
+        width: 100%;
+        overflow-y: hidden;
+    }
 }
